[INFER] Fix jsop_relational_double to sync rhs correctly if lhs is not a number, bug 657120. r=bhackett